# ghetto-xray

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  flake.nix  morningstar-integration-ai-notes.md  pre-commit.nix  tailwind-vscode.css  tailwind.css  treefmt.nix
assets/: styles.css  tailwind.css
data/: AGENTS.md  funds.csv  generated_securities.json  securities.json
src/: constants.rs  form.rs  input.rs  main.rs  model.rs  securities.rs  table.rs  tutorial.rs  xray.rs
src/ui/: card.rs  hero.rs  icon.rs  mod.rs  modal.rs
tailwind-plugins/: daisyui.js
