[package]
name = "ghetto-xray"
version = "0.1.0"
authors = ["Haf <haf@protonmail.ch>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
itertools = { version = "0.14" }
nestify = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }

[build-dependencies]
csv = { version = "1.3" }
serde_json = { version = "1.0" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1


[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"
